--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CelsiusConversion"></activity>
+        <activity android:name=".FahrenheitConversion"></activity>
+        <activity android:name=".CelsiusConversion" />
         <activity android:name=".TemperatureMenu" />
         <activity android:name=".MainActivity">
             <intent-filter>
