--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".KelvinConversion"></activity>
+        <activity android:name=".KilogramMenu"  />
+        <activity android:name=".WeightVolumeMenu" />
+        <activity android:name=".KelvinConversion" />
         <activity android:name=".FahrenheitConversion" />
         <activity android:name=".CelsiusConversion" />
         <activity android:name=".TemperatureMenu" />
