--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LitreMenuAndConversion"></activity>
+        <activity android:name=".GallonMenuAndConversion"/>
+        <activity android:name=".LitreMenuAndConversion" />
         <activity android:name=".PoundMenuAndConversion" />
         <activity android:name=".KilogramMenu" />
         <activity android:name=".WeightVolumeMenu" />
