--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MileConversion"></activity>
+        <activity android:name=".NauticalMileConversion"></activity>
+        <activity android:name=".MileConversion" />
         <activity android:name=".KilometerConversion" />
         <activity android:name=".DistanceMenu" />
         <activity android:name=".GallonMenuAndConversion" />
